outputs/main/reevo-qd_bpp_online_2025-07-26_01-19-44/problem_iter13_response1.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 32
    weighted_nearby Penalty = nearly_empty_penalty * dynamic_weight
                    ^^^^^^^
SyntaxError: invalid syntax
16
3
